--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -567,6 +567,13 @@
         "TIME_SLOTS_SET_DEFAULT": "Set as default time slot",
         "PAYMENT_FORM_ELIGIBLE_AMOUNT_EDENRED": "Eligible Ticket Restaurant® amount",
         "PAYMENT_FORM_CARD_COMPLEMENT": "Amount to be paid by credit card",
-        "MEAL_VOUCHER_DISCLAIMER": "Your meal vouchers can only be used to order food. Delivery and service charges will therefore be debited via your usual payment method (Mastercard, Visa)."
+        "MEAL_VOUCHER_DISCLAIMER": "Your meal vouchers can only be used to order food. Delivery and service charges will therefore be debited via your usual payment method (Mastercard, Visa).",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "We have found a more optimized route for your delivery.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "It would make use gain a distance of {{distance}}.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Would you like to apply the optimized route?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Current order",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Suggested order",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Yes",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "No, thanks"
     }
 }
