--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -224,10 +224,11 @@
         "CART_CHANGE_FULFILMENT_DETAILS_MODAL_TEXT_LINE_2": "Please add an item to the cart if you want to start a new order and then update this information",
         "CART_CHANGE_FULFILMENT_DETAILS_MODAL_BTN_YES": "OK",
         "CART_CHANGE_FULFILMENT_DETAILS_MODAL_BTN_NO": "Go back to previous order",
-        "CART_TIME_RANGE_CHANGED_MODAL_TEXT_LINE_1": "Selected time range is no longer available",
-        "CART_TIME_RANGE_CHANGED_MODAL_TEXT_LINE_2": "Please choose another time range",
-        "CART_RESTAURANT_NOT_AVAILABLE_MODAL_TEXT_LINE_1": "Selected restaurant is no longer available",
-        "CART_RESTAURANT_NOT_AVAILABLE_MODAL_TEXT_LINE_2": "Please choose another restaurant",
+        "CART_TIME_RANGE_CHANGED_MODAL_TITLE": "Selected time range is no longer available for today",
+        "CART_TIME_RANGE_CHANGED_MODAL_MESSAGE": "The store's opening hours do not allow the order to be placed today",
+        "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_TIME_RANGE_TEXT": "Please choose another time range",
+        "CART_TIME_RANGE_CHANGED_MODAL_SELECT_TIME_RANGE_ACTION": "Change delivery time",
+        "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_RESTAURANT_ACTION": "Choose another restaurant",
         "NOT_AVAILABLE_ATM": "Not available at the moment",
         "CART_ADDRESS_MODAL_HELP_TEXT": "Please enter your address accurately, with the street number and name",
         "CART_ADDRESS_MODAL_BACK_TO_RESTAURANTS": "Go back to restaurants list",
