--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1421,3 +1421,5 @@ form.settings.company_legal_name.help: "Veuillez entrer le nom légal complet de
 form.settings.company_legal_id.label: "Numéro de SIRET"
 form.settings.company_legal_id.help: "Ce numéro est généralement disponible sur les documents officiels de l'entreprise, tels que les factures ou les contrats."
 restaurant.form.edenred_enabled.label: Activer Edenred
+form.pricing_rule.level.delivery.label: Livraison
+form.pricing_rule.level.task.label: Tâche
