--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -111,7 +111,7 @@
         "ADMIN_DASHBOARD_FILTERS_TAGS": "Tags",
         "ADMIN_DASHBOARD_FILTERS_ORGS": "Negozi, botteghe",
         "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_HELP_TEXT": "Digita \"-\" per escludere.",
-        "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_PLACEHOLDER": "Seleziona un tag, un negozio, una bottega...",
+        "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_PLACEHOLDER": "Seleziona un tag, un negozio, un ristorante, una bottega...",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_CONTACT_NAME_LABEL": "Nome della persona da contattare",
         "ADMIN_DASHBOARD_FILTERS_TAB_TIMERANGE": "Fascia oraria",
         "ADMIN_DASHBOARD_COMPLETE_FORM_FAILURE": "Segnala un problema",
