--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -78,7 +78,7 @@
         "ADMIN_DASHBOARD_UNASSIGN_TASKS_MULTI": "Austragen {{count}} task(s)",
         "ADMIN_DASHBOARD_FILTERS_TAB_TAGS_AND_ORGS": "Tags, Läden, Geschäfte",
         "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_HELP_TEXT": "Geben Sie \"-\" ein, um auszuschließen.",
-        "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_PLACEHOLDER": "Wählen Sie ein Tag, einen Laden, ein Geschäft...",
+        "ADMIN_DASHBOARD_FILTERS_TAGS_AND_ORGS_PLACEHOLDER": "Wählen Sie ein Tag, einen Laden, ein Restaurant, ein Geschäft...",
         "ADMIN_DASHBOARD_ORDERS_TAKEAWAY_ALERT": "Diese Bestellung wird vom Kunden abgeholt",
         "ADMIN_DASHBOARD_ORDERS_REFUSE_REASON": "Aus welchem Grund lehnst du diese Bestellung ab?",
         "ADMIN_DASHBOARD_ORDERS_CANCEL_REASON": "Aus welchem Grund stornierst du diese Bestellung?",
