--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -145,6 +145,7 @@
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_DESC": "Display by dropoff desc.",
         "ADMIN_DASHBOARD_IMPORT_FILE_FORMATS": "Supported file formats: csv, ods, xlsx",
         "ADMIN_DASHBOARD_SETTINGS_CLUSTERS_ENABLED": "Enabled map clusters",
+        "ADMIN_DASHBOARD_SETTINGS_SHOW_WEIGHT": "Show volumes and weights",
         "ADMIN_DASHBOARD_PACKAGES": "Packages",
         "ADMIN_DASHBOARD_WEIGHT": "Weight",
         "ADMIN_DASHBOARD_MOVE_TO_NEXT_DAY_MULTI": "Move {{count}} tasks to next day",
