--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -87,6 +87,7 @@
         "ADMIN_DASHBOARD_SEARCH": "Buscar",
         "ADMIN_DASHBOARD_SETTINGS_POLYLINE": "Interfaz de rutas",
         "ADMIN_DASHBOARD_SETTINGS_POLYLINE_AS_THE_CROW_FLIES": "A vuelo de pájaro",
+        "ADMIN_DASHBOARD_SETTINGS_SHOW_WEIGHT": "Mostrar volúmenes y pesos",
         "ADMIN_DASHBOARD_IMPORT_FILE_FORMATS": "Formatos de archivo admitidos: csv, ods, xlsx",
         "ADMIN_DASHBOARD_PACKAGES": "Paquetes",
         "ADMIN_DASHBOARD_WEIGHT": "Peso",
