--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -225,7 +225,7 @@
         "CART_CHANGE_FULFILMENT_DETAILS_MODAL_BTN_YES": "OK",
         "CART_CHANGE_FULFILMENT_DETAILS_MODAL_BTN_NO": "Go back to previous order",
         "CART_TIME_RANGE_CHANGED_MODAL_TITLE": "Selected time range is no longer available for today",
-        "CART_TIME_RANGE_CHANGED_MODAL_MESSAGE": "The store's opening hours do not allow the order to be placed today",
+        "CART_TIME_RANGE_CHANGED_MODAL_MESSAGE": "The opening hours do not allow the order to be placed today",
         "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_TIME_RANGE_TEXT": "Please choose another time range",
         "CART_TIME_RANGE_CHANGED_MODAL_SELECT_TIME_RANGE_ACTION": "Change delivery time",
         "CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_RESTAURANT_ACTION": "Choose another restaurant",
