--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -144,6 +144,8 @@
         "ADMIN_DASHBOARD_VIEW_MODE_BY_GROUP": "Display by groups",
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_DESC": "Display by dropoff desc.",
         "ADMIN_DASHBOARD_IMPORT_FILE_FORMATS": "Supported file formats: csv, ods, xlsx",
+        "ADMIN_DASHBOARD_SETTINGS_YES": "Yes",
+        "ADMIN_DASHBOARD_SETTINGS_NO": "No",
         "ADMIN_DASHBOARD_SETTINGS_CLUSTERS_ENABLED": "Enabled map clusters",
         "ADMIN_DASHBOARD_SETTINGS_SHOW_WEIGHT": "Show volume and weight",
         "ADMIN_DASHBOARD_SETTINGS_SHOW_DISTANCE_AND_TIME": "Show distance and time",
