--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -244,6 +244,8 @@
         "ADMIN_DASHBOARD_SETTINGS_CLUSTERS_ENABLED": "Activer les clusters",
         "ADMIN_DASHBOARD_SETTINGS_SHOW_WEIGHT": "Montrer les volumes et les poids",
         "ADMIN_DASHBOARD_SETTINGS_SHOW_DISTANCE_AND_TIME": "Montrer les distances et temps indicatifs",
+        "ADMIN_DASHBOARD_SETTINGS_YES": "Oui",
+        "ADMIN_DASHBOARD_SETTINGS_NO": "Non",
         "ADMIN_DASHBOARD_FILTERS_ALWAYS_SHOW_UNASSIGNED": "Toujours afficher les tâche non assignées",
         "ADMIN_DASHBOARD_ORDERS_TAKEAWAY_ALERT": "Cette commande sera retirée sur place par le client",
         "ADMIN_DASHBOARD_ORDERS_REFUSE_REASON": "Pour quelle raison refusez-vous cette commande ?",
