--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -4,6 +4,8 @@
         "DELIVERY_FORM": "Delivery form",
         "CART_TITLE": "Cart",
         "CART_WIDGET_BUTTON": "Order",
+        "VEHICLES": "Vehicles",
+        "TRAILERS": "Trailers",
         "SHOW_DETAILS": "Show details",
         "SCHEDULE_ORDER": "Schedule order",
         "CART_EMPTY": "Your cart is empty",
@@ -12,7 +14,9 @@
         "OPENING_HOURS_SINGLE_TIME_SLOT": "On {{day}} between {{open}} and {{close}}",
         "OPENING_HOURS_RANGE_TIME_SLOT": "From {{fromDay}} to {{toDay}}, between {{open}} and {{close}}",
         "DELIVERY_TIME_SLOTS": "Delivery time slots",
-        "ADD_BUTON": "Add",
+        "ADD_BUTTON": "Add",
+        "SAVE_BUTTON": "Save",
+        "FORM_REQUIRED": "Required",
         "DATEPICKER_TODAY": "[Today]",
         "DATEPICKER_TOMORROW": "[Tomorrow]",
         "DASHBOARD_UNASSIGNED": "Unassigned",
@@ -175,6 +179,19 @@
         "ADMIN_DASHBOARD_WAIT_FOR_PREVIOUS_ASSIGN": "Waiting for previous assignment to complete",
         "ADMIN_DASHBOARD_AND_CLOSE_THE_INCIDENT": "{{action}} and close the incident",
         "ADMIN_DASHBOARD_LOADING_ORGS": "Loading stores and shops...",
+        "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
+        "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
+        "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
+        "ADMIN_VEHICLE_FORM_TITLE": "Create vehicle",
+        "ADMIN_VEHICLE_TRAILER_FORM_TITLE": "Create trailer",
+        "ADMIN_VEHICLE_NAME_LABEL": "Name",
+        "ADMIN_VEHICLE_MAX_WEIGHT_LABEL": "Maximum carried weight (kg)",
+        "ADMIN_VEHICLE_MAX_VOLUME_UNITS_LABEL": "Maximum carried volume units",
+        "ADMIN_VEHICLE_COLOR_LABEL": "Color",
+        "ADMIN_VEHICLE_IS_ELECTRIC_LABEL": "Electrified?",
+        "ADMIN_VEHICLE_ELECTRIC_RANGE_LABEL": "Electric range",
+        "ADMIN_VEHICLE_COMPATIBLE_VEHICLES_LABEL": "Compatible vehicles",
+        "ADMIN_VEHICLE_WAREHOUSE_LABEL": "Warehouse",
         "USER_EDIT_ENABLED_LABEL": "Enabled",
         "USER_EDIT_DISABLED_LABEL": "Disabled",
         "ORDER_TIMELINE_CREATED_TITLE": "{{date}} Order created",
