--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -8,7 +8,7 @@
         "OPENING_HOURS_SINGLE_TIME_SLOT": "Le {{day}} entre {{open}} et {{close}}",
         "OPENING_HOURS_RANGE_TIME_SLOT": "Du {{fromDay}} au {{toDay}} entre {{open}} et {{close}}",
         "DELIVERY_TIME_SLOTS": "Horaires de livraison",
-        "ADD_BUTON": "Ajouter",
+        "ADD_BUTTON": "Ajouter",
         "DATEPICKER_TODAY": "[Aujourd'hui]",
         "DATEPICKER_TOMORROW": "[Demain]",
         "DASHBOARD_UNASSIGNED": "Non assignées",
