--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -192,6 +192,8 @@
         "ADMIN_VEHICLE_ELECTRIC_RANGE_LABEL": "Electric range",
         "ADMIN_VEHICLE_COMPATIBLE_VEHICLES_LABEL": "Compatible vehicles",
         "ADMIN_VEHICLE_WAREHOUSE_LABEL": "Warehouse",
+        "ADMIN_VEHICLE_NO_WAREHOUSE": "Please create a warehouse before adding vehicles: each vehicle sits in a warehouse!",
+        "ADMIN_VEHICLE_TO_WAREHOUSE_PAGE": "To warehouses admin page",
         "USER_EDIT_ENABLED_LABEL": "Enabled",
         "USER_EDIT_DISABLED_LABEL": "Disabled",
         "ORDER_TIMELINE_CREATED_TITLE": "{{date}} Order created",
