changed: updated copy

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -17,7 +17,7 @@
         "DATEPICKER_TOMORROW": "[Tomorrow]",
         "DASHBOARD_UNASSIGNED": "Unassigned",
         "DASHBOARD_UNASSIGNED_TOURS": "Unassigned tours",
-        "DASHBOARD_GENERATING_ORDERS": "Loading subscriptions...",
+        "DASHBOARD_GENERATING_ORDERS": "Checking active subscriptions...",
         "ENABLED": "Enabled",
         "DISABLED": "Disabled",
         "new": "New orders",
