feat: add missing translations

--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -10,6 +10,10 @@
         "DATEPICKER_TODAY": "[Heute]",
         "DATEPICKER_TOMORROW": "[Morgen]",
         "DASHBOARD_UNASSIGNED": "Nicht zugeteilt",
+        "VEHICLES": "Fahrzeuge",
+        "TRAILERS": "Anhänger",
+        "SAVE_BUTTON": "Speichern",
+        "FORM_REQUIRED": "Erforderlich",
         "ENABLED": "Aktiviert",
         "DISABLED": "Deaktiviert",
         "new": "Neu",
@@ -93,6 +97,23 @@
         "ADMIN_DASHBOARD_TOOLTIP_FAILED": "Fehlgeschlagen",
         "ADMIN_DASHBOARD_TOOLTIP_INCIDENT_REPORTED": "Vorfall gemeldet",
         "ADMIN_DASHBOARD_TOOLTIP_TOTAL": "Gesamt",
+        "ADMIN_WAREHOUSE_FORM_TITLE": "Ein Lager erstellen",
+        "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
+        "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
+        "ADMIN_VEHICLE_FORM_TITLE": "Fahrzeug erstellen",
+        "ADMIN_VEHICLE_UPDATE_FORM_TITLE": "Fahrzeug aktualisieren",
+        "ADMIN_VEHICLE_UPDATE_TRAILER_FORM_TITLE": "Anhänger aktualisieren",
+        "ADMIN_VEHICLE_TRAILER_FORM_TITLE": "Anhänger erstellen",
+        "ADMIN_VEHICLE_NAME_LABEL": "Name",
+        "ADMIN_VEHICLE_MAX_WEIGHT_LABEL": "Maximales Transportgewicht (kg)",
+        "ADMIN_VEHICLE_MAX_VOLUME_UNITS_LABEL": "Maximale Transportvolumeneinheiten",
+        "ADMIN_VEHICLE_COLOR_LABEL": "Farbe",
+        "ADMIN_VEHICLE_IS_ELECTRIC_LABEL": "Elektrifiziert?",
+        "ADMIN_VEHICLE_ELECTRIC_RANGE_LABEL": "Elektrische Reichweite",
+        "ADMIN_VEHICLE_COMPATIBLE_VEHICLES_LABEL": "Kompatible Fahrzeuge",
+        "ADMIN_VEHICLE_WAREHOUSE_LABEL": "Lager",
+        "ADMIN_VEHICLE_NO_WAREHOUSE": "Bitte erstellen Sie ein Lager, bevor Sie Fahrzeuge hinzufügen: Jedes Fahrzeug befindet sich in einem Lager!",
+        "ADMIN_VEHICLE_NO_VEHICLE": "Bitte erstellen Sie ein Fahrzeug, bevor Sie Anhänger hinzufügen: Jeder Anhänger ist mit bestimmten Fahrzeugen kompatibel!",
         "DELIVERY_TIME_SLOTS": "Lieferzeitraum",
         "OPENING_HOURS_RANGE_TIME_SLOT": "Vom {{fromDay}} bis {{toDay}}, zwischen {{open}} und {{close}}",
         "OPENING_HOURS_SINGLE_TIME_SLOT": "Am {{day}} zwischen {{open}} und {{close}}",
