--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -20,6 +20,10 @@
         "fulfilled": "Livrée",
         "cancelled": "Annulée",
         "ready": "Prête",
+        "VEHICLES": "Véhicules",
+        "TRAILERS": "Remorques",
+        "SAVE_BUTTON": "Sauvegarder",
+        "FORM_REQUIRED": "Requis",
         "DASHBOARD_ASSIGNED": "Assignées",
         "DASHBOARD_UNASSIGNED_TOURS": "Tournées non assignées",
         "ADMIN_DASHBOARD_COURIER": "Coursier",
@@ -251,6 +255,23 @@
         "ADMIN_DASHBOARD_ORDERS_REFUSE_REASON": "Pour quelle raison refusez-vous cette commande ?",
         "ADMIN_DASHBOARD_ORDERS_CANCEL_REASON": "Pour quelle raison annulez-vous cette commande ?",
         "ADMIN_DASHBOARD_ORDERS_TIMELINE": "Historique",
+        "ADMIN_WAREHOUSE_FORM_TITLE": "Créer un entrepôt",
+        "ADMIN_WAREHOUSE_NAME_LABEL": "Nom",
+        "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
+        "ADMIN_VEHICLE_FORM_TITLE": "Créer un véhicule",
+        "ADMIN_VEHICLE_UPDATE_FORM_TITLE": "Mettre à jour le véhicule",
+        "ADMIN_VEHICLE_UPDATE_TRAILER_FORM_TITLE": "Mettre à jour la remorque",
+        "ADMIN_VEHICLE_TRAILER_FORM_TITLE": "Créer une remorque",
+        "ADMIN_VEHICLE_NAME_LABEL": "Nom",
+        "ADMIN_VEHICLE_MAX_WEIGHT_LABEL": "Poids maximal transporté (kg)",
+        "ADMIN_VEHICLE_MAX_VOLUME_UNITS_LABEL": "Volume maximal transporté",
+        "ADMIN_VEHICLE_COLOR_LABEL": "Couleur",
+        "ADMIN_VEHICLE_IS_ELECTRIC_LABEL": "Électrifié?",
+        "ADMIN_VEHICLE_ELECTRIC_RANGE_LABEL": "Autonomie électrique",
+        "ADMIN_VEHICLE_COMPATIBLE_VEHICLES_LABEL": "Véhicules compatibles",
+        "ADMIN_VEHICLE_WAREHOUSE_LABEL": "Entrepôt",
+        "ADMIN_VEHICLE_NO_WAREHOUSE": "Veuillez créer un entrepôt avant d'ajouter des véhicules : chaque véhicule se trouve dans un entrepôt !",
+        "ADMIN_VEHICLE_NO_VEHICLE": "Veuillez créer un véhicule avant d'ajouter des remorques : chaque remorque est compatible avec des véhicules donnés !",
         "ALLERGEN": {
           "CEREALS_CONTAINING_GLUTEN": "Céréales contenant du gluten",
           "CRUSTACEANS": "Crustacés",
