--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1537,3 +1537,4 @@ form.settings.paygreen.title: Paygreen configuration
 form.settings.paygreen_public_key.label: Paygreen public key
 form.settings.paygreen_secret_key.label: Paygreen secret key
 form.settings.paygreen_shop_id.label: Paygreen Shop ID
+restaurant.form.paygreen_shop_id.label: Paygreen Shop ID
