--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1425,3 +1425,4 @@ form.settings.company_legal_name.help: "Veuillez entrer le nom légal complet de
 form.settings.company_legal_id.label: "Numéro de SIRET"
 form.settings.company_legal_id.help: "Ce numéro est généralement disponible sur les documents officiels de l'entreprise, tels que les factures ou les contrats."
 restaurant.form.edenred_enabled.label: Activer Edenred
+restaurant.form.paygreen_shop_id.label: Identifiant de boutique Paygreen
