feat: add translation strings

--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -23,6 +23,9 @@
         "fulfilled": "Zugestellt",
         "cancelled": "Storniert",
         "ready": "Fertig",
+        "UNDO": "Rückgängig machen",
+        "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} Element(e) wurden nicht zugewiesen, weil sie nicht den Anforderungen entsprachen.",
+        "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "Die Zuordnungen wurden optimiert. Die vorherige Entfernung betrug {{ previousDistance }}, die vorherige Dauer {{ previousDuration }}.",
         "DASHBOARD_ASSIGNED": "Zugeteilt",
         "ADMIN_DASHBOARD_NORMAL": "Normal",
         "ADMIN_DASHBOARD_RUSH": "Rush",
