--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -29,6 +29,9 @@
         "fulfilled": "Consegnato",
         "cancelled": "Cancellato",
         "ready": "Pronto",
+        "UNDO": "Annulla",
+        "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} elemento(i) sono stati non assegnati perché non rispettavano i vincoli.",
+        "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "Le assegnazioni sono state ottimizzate. La distanza precedente era {{ previousDistance }}, la durata precedente {{ previousDuration }}.",
         "DASHBOARD_ASSIGNED": "Assegnato",
         "ADMIN_DASHBOARD_NORMAL": "Normale",
         "ADMIN_DASHBOARD_RUSH": "Ora di punta",
