feat: add translation strings

--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -19,6 +19,9 @@
         "TRAILERS": "Remolques",
         "SAVE_BUTTON": "Guardar",
         "FORM_REQUIRED": "Requerido",
+        "UNDO": "Deshacer",
+        "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} elemento(s) fueron desasignados porque no cumplían con las restricciones.",
+        "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "Las asignaciones fueron optimizadas. La distancia anterior era {{ previousDistance }}, la duración anterior {{ previousDuration }}.",
         "new": "Nuevo",
         "accepted": "Aceptado",
         "refused": "Rechazado",
