--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -24,6 +24,9 @@
         "TRAILERS": "Remorques",
         "SAVE_BUTTON": "Sauvegarder",
         "FORM_REQUIRED": "Requis",
+        "UNDO": "Annuler",
+        "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} tâches(s) ont été désaffectées car elles ne répondaient pas aux contraintes.",
+        "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "Les assignations ont été optimisées. La distance précédente était de {{ previousDistance }}, la durée précédente {{ previousDuration }}.",
         "DASHBOARD_ASSIGNED": "Assignées",
         "DASHBOARD_UNASSIGNED_TOURS": "Tournées non assignées",
         "ADMIN_DASHBOARD_COURIER": "Coursier",
