--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -162,6 +162,7 @@
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Show recurrence rules",
         "RECURRENCE_RULE_ADD": "Add recurrence rule",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Please choose at least one day",
+        "SUBSCRIPTION_CANCELLED": "Subscription cancelled",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Are you sure you want to delete all the tasks in this group?",
         "ADMIN_DASHBOARD_DELETE_TOUR_CONFIRM": "Delete this tour and move tasks to \"Unassigned\"",
         "ADMIN_DASHBOARD_TOOLTIP_COMPLETED": "Completed",
