--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -26,6 +26,7 @@
         "FORM_REQUIRED": "Requis",
         "DASHBOARD_ASSIGNED": "Assignées",
         "DASHBOARD_UNASSIGNED_TOURS": "Tournées non assignées",
+        "DASHBOARD_GENERATING_ORDERS": "Vérification des abonnements actifs...",
         "ADMIN_DASHBOARD_COURIER": "Coursier",
         "ADMIN_DASHBOARD_COURIERS": "Coursiers",
         "ADMIN_DASHBOARD_CANCEL": "Annuler",
@@ -392,6 +393,9 @@
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Montrer les règles récurrentes",
         "ADMIN_RECURRENCE_RULE_NAME_PLACEHOLDER": "Nom de la règle",
         "RULE_PICKER_LINE_TASK_TYPE": "Type de tâche",
+        "RECURRENCE_RULE_ADD": "Ajouter une règle de récurrence",
+        "RECURRENCE_RULE_DAYS_REQUIRED": "Veuillez choisir au moins un jour",
+        "SUBSCRIPTION_CANCELLED": "Abonnement annulé",
         "CART_ENABLE_ZERO_WASTE": "Activer l'option zéro déchet",
         "CART_ZERO_WASTE_POPUP_TEXT": "Bravo, votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ». Faites-vous livrer en boîtes consignées et retournez vos boîtes partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande. Vous pouvez désactiver cette option à tout moment.",
         "LEARN_MORE": "En savoir plus",
