--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -25,6 +25,7 @@
         "ENABLED": "Enabled",
         "DISABLED": "Disabled",
         "UNDO": "Undo",
+        "CLEAR": "Clear",
         "new": "New orders",
         "accepted": "Accepted",
         "refused": "Refused",
@@ -184,6 +185,7 @@
         "ADMIN_DASHBOARD_WAIT_FOR_PREVIOUS_ASSIGN": "Waiting for previous assignment to complete",
         "ADMIN_DASHBOARD_AND_CLOSE_THE_INCIDENT": "{{action}} and close the incident",
         "ADMIN_DASHBOARD_LOADING_ORGS": "Loading stores and shops...",
+        "ADMIN_DASHBOARD_NO_COMPATIBLE_TRAILER": "No compatible trailers with this bike",
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
