feat: add undo ability after optim

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -24,6 +24,7 @@
         "DASHBOARD_GENERATING_ORDERS": "Checking active subscriptions...",
         "ENABLED": "Enabled",
         "DISABLED": "Disabled",
+        "UNDO": "Undo",
         "new": "New orders",
         "accepted": "Accepted",
         "refused": "Refused",
@@ -201,6 +202,8 @@
         "ADMIN_VEHICLE_NO_WAREHOUSE": "Please create a warehouse before adding vehicles: each vehicle sits in a warehouse!",
         "ADMIN_VEHICLE_NO_VEHICLE": "Please create a vehicle before adding trailers: each trailer is compatible to given vehicles!",
         "ADMIN_VEHICLE_TO_WAREHOUSE_PAGE": "To warehouses admin page",
+        "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} item(s) were unassigned because it did not fit in the constraints.",
+        "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "The assignements were optimized. Previous distance was {{ previousDistance }}, previous duration {{ previousDuration }}.",
         "USER_EDIT_ENABLED_LABEL": "Enabled",
         "USER_EDIT_DISABLED_LABEL": "Disabled",
         "ORDER_TIMELINE_CREATED_TITLE": "{{date}} Order created",
