Add titles & separators for payment sections.

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1543,3 +1543,4 @@ form.settings.paygreen_public_key.label: Paygreen public key
 form.settings.paygreen_secret_key.label: Paygreen secret key
 form.settings.paygreen_shop_id.label: Paygreen Shop ID
 restaurant.form.paygreen_shop_id.label: Paygreen Shop ID
+form.local_business.paygreen_account.title: Paygreen account
